--- a/main.html
+++ b/main.html
@@ -48,42 +48,54 @@
     </style>
 </head>
 <body>
-    <form action="/your-api-endpoint" method="POST">
+    <form>
         <div class="form-container">
             <div class="form-column">
                 <label class="form-label" for="input1">Address:</label>
                 <input class="form-input" type="text" id="input1" name="input1" required>
             </div>
             <div class="form-column">
-                <label class="form-label" for="input2">Characteristics:</label>
+                <label class="form-label" for="input2">Postal Code:</label>
                 <input class="form-input" type="text" id="input2" name="input2" required>
             </div>
+            <div class="form-column">
+                <label class="form-label" for="input3">City Name:</label>
+                <input class="form-input" type="text" id="input3" name="input3" required>
+            </div>
+            <div class="form-column">
+                <label class="form-label" for="input4">Country Code:</label>
+                <input class="form-input" type="text" id="input4" name="input4" required>
+            </div>
         </div>
-        <button type="button" onclick=submitForm()>Submit</button>
+        <button type="submit" class="form-submit" onclick=submitForm()>Submit</button>
     </form>
-</body>
     <div id="output"></div>
+</body>
     <script>
         function submitForm() {
-            const input1Value = document.getElementById("input1").value;
-            const input2Value = document.getElementById("input2").value;
+            const address = document.getElementById("input1").value;
+            const postal_code = document.getElementById("input2").value;
+            const city = document.getElementById("input3").value;
+            const country = document.getElementById("input4").value;
 
-            // Replace '/your-api-endpoint' with the actual API endpoint
-            const apiEndpoint = '';
             const url = `https://api-euw1.rms.com/li/geocode/latest`;
 
             // const data = {
-            //     input1: input1Value,
-            //     input2: input2Value
+            //     "admin1Code": "CA",
+            //     "cityName": "NEWARK",
+            //     "countryCode": "US",
+            //     "countryScheme": "ISO2A",
+            //     "postalCode": "94560",
+            //     "streetAddress": "7575 GATEWAY BLVD"
             // };
 
             const data = {
                 "admin1Code": "CA",
-                "cityName": "NEWARK",
-                "countryCode": "US",
+                "cityName": city,
+                "countryCode": country,
                 "countryScheme": "ISO2A",
-                "postalCode": "94560",
-                "streetAddress": "7575 GATEWAY BLVD"
+                "postalCode": postal_code,
+                "streetAddress": address
             };
 
             fetch(url, {
@@ -93,16 +105,12 @@
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify(data)
-            })
-                .then(response => response.json())
-                .then(data => {
-                    // Assuming the API returns some data, you can display it in the output div
+                })
+            .then(response => response.json())
+            .then(data => {
                     const outputDiv = document.getElementById("output");
                     outputDiv.innerHTML = `<p>API Response: ${JSON.stringify(data)}</p>`;
                 })
-                .catch(error => {
-                    console.error('Error fetching data:', error);
-                });
         }
     </script>
 </body>
