--- a/main.html
+++ b/main.html
@@ -66,52 +66,31 @@
                 <label class="form-label" for="input4">Country Code:</label>
                 <input class="form-input" type="text" id="input4" name="input4" required>
             </div>
+            <div class="form-column">
+                <label class="form-label" for="input5">Construction:</label>
+                <input class="form-input" type="text" id="input5" name="input5">
+            </div>
+            <div class="form-column">
+                <label class="form-label" for="input6">Occupancy:</label>
+                <input class="form-input" type="text" id="input6" name="input6" required>
+            </div>
+            <div class="form-column">
+                <label class="form-label" for="input7">Year built:</label>
+                <input class="form-input" type="text" id="input7" name="input7" required>
+            </div>
+            <div class="form-column">
+                <label class="form-label" for="input8">Number of stories:</label>
+                <input class="form-input" type="text" id="input8" name="input8" required>
+            </div>
+
         </div>
-        <button type="submit" class="form-submit" onclick=submitForm()>Submit</button>
     </form>
+    <button type="submit" class="form-submit" onclick=submitForm()>Submit</button>
     <div id="output"></div>
+    <div id="output2"></div>
+    <div id="output3"></div>
 </body>
-    <script>
-        function submitForm() {
-            const address = document.getElementById("input1").value;
-            const postal_code = document.getElementById("input2").value;
-            const city = document.getElementById("input3").value;
-            const country = document.getElementById("input4").value;
-
-            const url = `https://api-euw1.rms.com/li/geocode/latest`;
-
-            // const data = {
-            //     "admin1Code": "CA",
-            //     "cityName": "NEWARK",
-            //     "countryCode": "US",
-            //     "countryScheme": "ISO2A",
-            //     "postalCode": "94560",
-            //     "streetAddress": "7575 GATEWAY BLVD"
-            // };
-
-            const data = {
-                "admin1Code": "CA",
-                "cityName": city,
-                "countryCode": country,
-                "countryScheme": "ISO2A",
-                "postalCode": postal_code,
-                "streetAddress": address
-            };
-
-            fetch(url, {
-                method: 'POST',
-                headers: {
-                    'Authorization': 'NbJJAhlheCKsoARqzxF4Gl8ky72MKlJ1S2yMsMNcQBY',
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-                })
-            .then(response => response.json())
-            .then(data => {
-                    const outputDiv = document.getElementById("output");
-                    outputDiv.innerHTML = `<p>API Response: ${JSON.stringify(data)}</p>`;
-                })
-        }
+    <script src="javascript.js">
     </script>
 </body>
 </html>
